@@ -15,6 +15,7 @@
 - Fixed rare bug that could cause tracks to have an incorrect instrument name when importing a MIDI<br/>
 - Provide graphical warnings when a MIDI file cannot be perfectly loaded<br/>
 - Fixed rare printing crash<br/>
+- Fixed not staying centered when zooming with ctrl+mouse wheel<br/>
 - Don't exit when save dialog is cancelled<br/>
 - Code cleanup and unit tests<br/><br/>
 
