@@ -4,6 +4,7 @@
 - Fixed rare bug that could cause tracks to have an incorrect instrument name when importing a MIDI
 - Provide graphical warnings when a MIDI file cannot be perfectly loaded
 - Fixed rare printing crash
+- Fixed not staying centered when zooming with ctrl+mouse wheel
 - Don't exit when save dialog is cancelled
 - Code cleanup and unit tests
 
